# rolling_wallets

./: Cargo.toml  README.md  config.json
src/: config.rs  contract.rs  main.rs  wallet.rs
