[package]
name = "rolling_wallets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
ctrlc = "3.4.4"
env_logger = "0.11.3"
ethers = "2.0.14"
ethers-core = "2.0.14"
kanal = "0.1.0-pre8"
log = "0.4.22"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
